// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should made login with infos correct 1`] = `
Object {
  "message": "Login successful",
  "token": "JWT eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0ZW5hbnQiOiI2MGI1YTVlYWZlMzQwNmUwZmFmZjA0YmQiLCJ1c2VyIjoiNjBiNWE1ZWFmZTM0MDZlMGZhZmYwNGJlIiwiaWF0IjoxNjIyNTE3MjI2fQ.zFKHl6UZwXRsuqXo9im3z1YmrKJY8ghhRjLWScGZp-Y",
}
`;

exports[`should return error if any payload field is missing (email) 1`] = `
Object {
  "message": "Invalid login",
  "status": "ERROR",
  "user": null,
}
`;

exports[`should return error if tenant id is different of tenant already checked by auth 1`] = `
Object {
  "message": "Invalid tenant",
  "status": "ERROR",
  "user": null,
}
`;

exports[`should return error if user dont exist 1`] = `
Object {
  "message": "Email or password incorrect",
  "status": "ERROR",
  "user": null,
}
`;

exports[`should return error if user password is wrong 1`] = `
Object {
  "message": "Email or password incorrect",
  "status": "ERROR",
  "user": null,
}
`;
